--- a/gitops/apps/base/backend/deployment.yaml
+++ b/gitops/apps/base/backend/deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: psuhalka/todo-app-backend:tagname
+        image: psuhalka/todo-app-backend:latest
         ports:
         - containerPort: 3001
         env:
