--- a/gitops/apps/base/backend/deployment.yaml
+++ b/gitops/apps/base/backend/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         - name: DATABASE_URL
           valueFrom:
             secretKeyRef:
-              name: todo-db-credentials
+              name: todo-app-secret
               key: database-url
         - name: NODE_ENV
           value: production
